<resources>
    <string name="app_name">DutyCalc</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="fragment_list_label">Tour list</string>
    <string name="fragment_add_label">Add Dutyday</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--    Strings for the fragment_list.xml:-->
    <string name="fab_content_description">Adds a new dutyday.</string>
    <string name="dayOfTourDividerText">until</string>
    <string name="day_1">Day 1</string>
    <string name="day_2">Day 2</string>
    <string name="day_3">Day 3</string>
    <string name="day_4">Day 4</string>
    <string name="day_5">Day 5</string>
    <string name="day_6">Day 6</string>
    <string name="day_7">Day 7</string>
    <string name="total_tv">Total:</string>

    <!--    Strings for the fragment_add.xml:-->
    <string name="cbHasStandby">STBY @RL</string>
    <string name="hours_span_divider">until</string>
    <string name="show_label">Show</string>
    <string name="duty_closing_label">Duty closing</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnOk">OK</string>
    <string name="hint_times_text">00:00</string>
    <string name="tv_dutytime_text">Dutytime:</string>
</resources>