<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!-- Der nachfolgende Import wird für das Setzen der Visibility der TextViews benötigt -->
        <import type="android.view.View" />

        <!--        Der nachfolgende Import wird für das Konvertieren von Time nach String benötigt -->
        <import type="ch.marcelfuchs.dutycalc.converters.BindingConverter" />

        <variable
            name="viewModel"
            type="ch.marcelfuchs.dutycalc.viewmodel.ViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tvTotalDuty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <CheckBox
            android:id="@+id/cbHasStby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/cbHasStandby"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDate" />

        <EditText
            android:id="@+id/etStbyStart"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_border"
            android:gravity="center_horizontal"
            android:hint="@string/hint_times_text"
            android:importantForAutofill="no"
            android:inputType="time"
            android:text="@={BindingConverter.timeToString(viewModel.stbyStart)}"
            android:textAlignment="center"
            android:textSize="24sp"
            android:visibility="@{cbHasStby.checked?View.VISIBLE:View.GONE}"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/cbHasStby" />

        <EditText
            android:id="@+id/etStbyEnd"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/edit_text_border"
            android:gravity="center_horizontal"
            android:hint="@string/hint_times_text"
            android:importantForAutofill="no"
            android:inputType="time"
            android:text="@{viewModel.stbyEnd}"
            android:textAlignment="center"
            android:textSize="24sp"
            android:visibility="@{cbHasStby.checked?View.VISIBLE:View.GONE}"
            app:layout_constraintBaseline_toBaselineOf="@+id/etStbyStart"
            app:layout_constraintStart_toEndOf="@+id/imageView" />

        <TextView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/hours_span_divider"
            android:visibility="@{cbHasStby.checked?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/etStbyStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etStbyStart" />

        <TextView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/hours_span_divider"
            app:layout_constraintBottom_toBottomOf="@+id/etShow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etShow" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:text="@string/show_label"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/etShow"
            app:layout_constraintStart_toStartOf="@+id/etShow"
            app:layout_constraintTop_toBottomOf="@+id/etStbyStart" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/duty_closing_label"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/etDutyClosing"
            app:layout_constraintEnd_toEndOf="@+id/etDutyClosing"
            app:layout_constraintStart_toStartOf="@+id/etDutyClosing" />

        <EditText
            android:id="@+id/etShow"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/edit_text_border"
            android:gravity="center_horizontal"
            android:hint="@string/hint_times_text"
            android:inputType="time"
            android:text="@{viewModel.show}"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/etDutyClosing"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/edit_text_border"
            android:gravity="center_horizontal"
            android:hint="@string/hint_times_text"
            android:inputType="time"
            android:text="@{viewModel.dutyClosing}"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/etShow"
            app:layout_constraintStart_toEndOf="@+id/imageView2" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@{viewModel.newDutyDayDate}"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="28. Feb. 2012" />

        <ImageButton
            android:id="@+id/btnDayDec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvDate"
            app:layout_constraintEnd_toStartOf="@+id/tvDate"
            app:layout_constraintTop_toTopOf="@+id/tvDate"
            app:srcCompat="@drawable/ic_baseline_arrow_left_24" />

        <ImageButton
            android:id="@+id/btnDayInc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvDate"
            app:layout_constraintStart_toEndOf="@+id/tvDate"
            app:layout_constraintTop_toTopOf="@+id/tvDate"
            app:srcCompat="@drawable/ic_baseline_arrow_right_24" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="60dp"
            android:text="@string/btnCancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etShow" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/btnOk"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnCancel"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>